--- a/CapstoneProjectDashboardFE/Pages/Admin/UserPages/Index.cshtml
+++ b/CapstoneProjectDashboardFE/Pages/Admin/UserPages/Index.cshtml
@@ -37,6 +37,7 @@
                         <tr>
                             <th>@Html.DisplayNameFor(model => model.UserDTO[0].UserId)</th>
                             <th>@Html.DisplayNameFor(model => model.UserDTO[0].FullName)</th>
+                            <th>@Html.DisplayNameFor(model => model.UserDTO[0].Avatar)</th>
                             <th>@Html.DisplayNameFor(model => model.UserDTO[0].Email)</th>
                             <th>@Html.DisplayNameFor(model => model.UserDTO[0].Phone)</th>
                             <th>@Html.DisplayNameFor(model => model.UserDTO[0].Role)</th>
@@ -49,15 +50,18 @@
                             <tr>
                                 <td>@Html.DisplayFor(modelItem => item.UserId)</td>
                                 <td>@Html.DisplayFor(modelItem => item.FullName)</td>
+                                <td>
+                                    <img src="@item.Avatar" alt="User Avatar" class="user-avatar" style="width: 50px; height: 50px; border-radius: 50%; object-fit: cover;" />
+                                </td>
                                 <td>@Html.DisplayFor(modelItem => item.Email)</td>
                                 <td>@Html.DisplayFor(modelItem => item.Phone)</td>
                                 <td>@Html.DisplayFor(modelItem => item.Role)</td>
                                 <td>
                                     <div class="form-button-action">
-                                        <a type="button" asp-page="./Edit" asp-route-id="@item.UserId" data-bs-toggle="tooltip" title="Edit Task" class="btn btn-link btn-primary btn-lg">
-                                            <i class="fa fa-edit"></i>
-                                        </a>
-                                        <a type="button" asp-page="./Details" asp-route-id="@item.UserId" data-bs-toggle="tooltip" title="View Details" class="btn btn-link btn-primary btn-lg">
+                                        @* <a type="button" asp-page="./Edit" asp-route-id="@item.UserId" data-bs-toggle="tooltip" title="Edit Task" class="btn btn-link btn-primary btn-lg"> *@
+                                        @*     <i class="fa fa-edit"></i> *@
+                                        @* </a> *@
+                                        <a asp-page="./Details" asp-route-userId="@item.UserId" data-bs-toggle="tooltip" title="View Details" class="btn btn-link btn-primary btn-lg">
                                             <i class="fas fa-info-circle"></i>
                                         </a>
                                         <a type="button" asp-page="./Delete" asp-route-id="@item.UserId" data-bs-toggle="tooltip" title="Remove" class="btn btn-link btn-danger btn-lg">
