--- a/CapstoneProjectDashboardFE/Pages/Shared/_AdminLayout.cshtml
+++ b/CapstoneProjectDashboardFE/Pages/Shared/_AdminLayout.cshtml
@@ -96,10 +96,16 @@
 						 </li>
 						<li class="nav-item">
 							<a asp-page="/Admin/ProjectPages/index">
-								<i class="fas fa-project"></i>
+								<i class="fas fa-gamepad"></i>
 								<p>Project</p>
 							</a>
 						</li>
+					<li class="nav-item">
+						<a asp-page="/Admin/PledgePages/index">
+							<i class="fas fa-file-invoice-dollar"></i>
+							<p>Pledge</p>
+						</a>
+					</li>
 					</ul>
 				</div>
 			</div>
