--- a/CapstoneProjectDashboardFE/Pages/Shared/_AdminLayout.cshtml
+++ b/CapstoneProjectDashboardFE/Pages/Shared/_AdminLayout.cshtml
@@ -106,6 +106,12 @@
 							<p>Pledge</p>
 						</a>
 					</li>
+					<li class="nav-item">
+						<a asp-page="/Admin/ReportPages/index">
+							<i class="fas fa-chart-bar"></i>
+							<p>Report</p>
+						</a>
+					</li>
 					</ul>
 				</div>
 			</div>
