--- a/CapstoneProjectDashboardFE/Pages/Shared/_AdminLayout.cshtml
+++ b/CapstoneProjectDashboardFE/Pages/Shared/_AdminLayout.cshtml
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<title>Pet Spa Management Dashboard</title>
+	<title>GameMkt Management Dashboard</title>
 	<meta content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
 		  name="viewport" />
 	<link rel="icon"
@@ -20,7 +20,6 @@
 					"Font Awesome 5 Brands",
 					"simple-line-icons",
 				],
-				urls: ["~/adminAssets/assets/css/fonts.min.css"],
 			},
 			active: function () {
 				sessionStorage.fonts = true;
@@ -45,12 +44,12 @@
 			<div class="sidebar-logo">
 				<!-- Logo Header -->
 				<div class="logo-header" data-background-color="dark">
-					<a href="/" class="logo">
-						<img src="~/assets/img/logo/logo.png"
-							 alt="navbar brand"
-							 class="navbar-brand"
-							 height="30" />
-					</a>
+					@* <a href="/" class="logo"> *@
+					@* 	<img src="~/assets/img/logo/logo.png" *@
+					@* 		 alt="navbar brand" *@
+					@* 		 class="navbar-brand" *@
+					@* 		 height="30" /> *@
+					@* </a> *@
 					<div class="nav-toggle">
 						<button class="btn btn-toggle toggle-sidebar">
 							<i class="gg-menu-right"></i>
