Adding email after creating a project, Adding pledge Detail in dashboard, fixing comment

--- a/CapstoneProjectDashboardFE/Pages/Admin/PledgePages/Index.cshtml
+++ b/CapstoneProjectDashboardFE/Pages/Admin/PledgePages/Index.cshtml
@@ -48,7 +48,7 @@
                                 <td>@Html.DisplayFor(modelItem => item.Amount)</td>
                                 <td>
                                     <div class="form-button-action">
-                                        <a asp-page="./Details" asp-route-userId="@item.UserId" data-bs-toggle="tooltip" title="View Details" class="btn btn-link btn-primary btn-lg">
+                                        <a asp-page="./Details" asp-route-pledgeId="@item.PledgeId" data-bs-toggle="tooltip" title="View Details" class="btn btn-link btn-primary btn-lg">
                                             <i class="fas fa-info-circle"></i>
                                         </a>
                                     </div>
